# smith

./: .dockerignore  .env.template  .gitignore  .rules  Cargo.toml  DEVELOPMENT.md  Dockerfile  INTEGRATION_TESTING_SUMMARY.md  Makefile  README.md  SECURITY.md  api.Dockerfile  compose.e2e.yaml  compose.released-api.yaml  compose.yaml  device.Dockerfile  docker-compose.yml  package-lock.json  package.json  postgres.Dockerfile  schema.sql  seed.sql  smithd.Dockerfile
api/: .env.template  Cargo.toml  Dockerfile  accounts.toml  api.Dockerfile  backup.env.del  dev.Dockerfile  roles.toml
api/.sqlx/: query-00afb3a18d3a495301233f7a5eb6564a1473a6937187d203fa3cb15f5284784d.json  query-019e330539d4b02a8bd6873ef0d2b305e40bbeaafefec6b97f19b576c7a443f8.json  query-05b8cfcba523ae109c30a6a3bf1fa8a9d9514a201b90166ff34dde672b9421a6.json  query-07e2f4033fd62e81b6c7ff7d3bb7ac11f40d58c6ec9f52b8edb313462ba94293.json  query-07ea7fa3974181a8237ddd0cd65c0938c4506f1388b83c996c0998cf9a7b6d13.json  query-087e8194493b089ab9e62c9e3bec380a3735fb08cda4045be0545db7f926d19a.json  query-08ac3a339bf300939cccad578088e338c86dbdc56362065a9a78efa91ee96adb.json  query-0b8998660c2bf109514a516b9f47b3f627bc5515573258beb30e7b1c32268663.json  query-0bcedcd884630dc9c7484eb1981342e51c603060f93e2731dcd9d604841fef3c.json  query-0d61e715d355c970fc9d5c7506e64fcea14eb943263c850ae463316528f78483.json  query-102a7eacff946fe47ee735f2c55b1d0c966e87c5bd2ce7a49c26270993c63c34.json  query-1061c4a744924b73052f1eca91c86e2b12b6cb7628c9e23d9426cb8444680dd1.json  query-110f4a2a501e33e0e8c7a93a71987f26d393050b92e9c70a1f7647a47870790d.json  query-11255af6655f71fe19b04b9ee7cb4e69f9a41c644e64831db54050148c5af29c.json  query-1224748fcc151e7830b9ff50e98a8fb72d7cb273c8e39d72843df243baf2f7bb.json  query-1300a583fbb4f5e52be081118311c2e4570cc0922363dd8d4f6e3c9ba78fbc4d.json  query-1311fafe940078b30ce0f775d8a2b6c2c35303bf87d95d855fd5c8e1cb12b41d.json  query-1447a94e761ca2d152e1f4176376decd4f0c178a9887fbd15e9cddab9b092a9e.json  query-1512182a432147adfd7ea4f29471ed77ba94f16b07e13545d748ccda3d7fba51.json  query-1784039c22e1806207c4de62c2341c0fa448f2aa475faedc9d6f2ea75e87265a.json  query-1834c51fd9e6c53f706501845b7f8f73e7039480fdc4e26d62cbf908b3ad06ec.json  query-1a49766dac9162f63a47babd42e79c028266c1ab7a9bbfd37d04faf2b3c83411.json  query-1ab4514731b7957e9795e68e592e231352027420dc3dfd3eb511c5c0fb1d3aa9.json  query-1b21499cb0182c12a12121aee06ba082559223389003189f79f3c305053fee7c.json  query-1b5a293e5bd016c41da8f54a76aafcd63aa3c7f815a7a386d42bf662f592ce18.json  query-1b62d21f2a6297375489d497bc7ccc3074465d5bc1db3e9809becae8485fc345.json  query-1d93b37844a098d0b8c15e33962b59275d7818a63073002571210e0f4dbe740b.json  query-1dc5e77cb8b1f4e54609cf8c2da56866276f75bb08e34fc2ac5741a48d2fa80a.json  query-1ed288c854c2cba369d52f5d8b8aacdb2c89f42a0b421f7c6db7d6b20071158c.json  query-2098b0405a04c1076dcd58daa7cc4f6c78297e4ef956151304e7bbcd2d79daf9.json  query-225c048035a24f53f3439a52a825db23636d536e52b20d0693ced23e36d0f614.json  query-2359e2cced1b3b9f61869fd9ca7ecded3e3431e230b9c13139f1a937ae2897bb.json  query-239428235364f8fa13ef3417fe982fb0baa59490e38f948e84639a0ce355d54f.json  query-239d577331e544a18001d462aef68ad80bab9af60284df7224fd31930cf515fc.json  query-27f9c095c62c7bf89996be389be584cb48db643b5fc9e5ed53f7550eb07c14d0.json  query-29a75993781d77ab24f286a56658da19f14f563a9f9d671ba88d484b32cab04d.json  query-29a94a4373c16d4691c8944e2f55210992452cc3030198fa0047d6a31e71078c.json  query-2a4ff3308bc6219fc708086e47b29ed3f7ec61a05b75b17bf0033d70bfc35bad.json  query-2aca06ef08aef9a2471cd73e6c902219ec4508a23fd7d9b20415b8c3944caf19.json  query-2dcdef6c918e1d3f83295f3418920e5e8d46a128ffe20e3aaf976844d12dbcdf.json  (+187 more)
api/migrations/: 20250827095402_add_device_ip_tracking.sql  20250904073805_who-did-it.sql  20250905054936_release_notes.sql  20251008111649_network_metrics.sql  20251010074937_device_network.sql  20251013145937_device_labels.sql  20251017000000_add_unique_modem_constraint.sql  20251022000000_add_download_speed_mbps.sql  20251121111511_add_upload_speed_mbps.sql  20251202135640_normalize_labels.sql  20251216093718_release_services.sql  20260116000000_add_target_release_id_set_at.sql  20260120092428_drop_tags.sql  20260220100000_network_test_sessions.sql  20260226000000_device_service_status.sql  20260305000000_release_candidate.sql  20260309000000_distribution_latest_release.sql  20260513000000_ip_address_id_bigint.sql  20260513000000_widen_ip_address_id.sql  20260604000000_command_recipes.sql  20260612000000_device_audit.sql  20260624000000_archive_distributions.sql  20260626000001_device_authorized_network.sql  20260626000002_device_current_network.sql  20260626000003_wifi_scan_result.sql  20260626000004_device_configured_network.sql  20260626000005_network_ssid_password_unique.sql  20260703000003_wifi_scan_result.sql  20260706000000_user_favorite_devices.sql  20260708000000_device_network_intent.sql  20260708000001_device_intent_columns.sql  20260709000000_one_role_per_user.sql  20260715000000_command_bundle_user.sql  20260720000000_network_schema_expand.sql  20260720000001_network_backfill.sql
api/seeds/: seed.sql
api/src/: config.rs  dashboard.rs  db.rs  error.rs  home.rs  main.rs  metric.rs  sentry.rs  slack.rs  storage.rs
api/src/auth/: device_jwt.rs  jwks.rs  mod.rs  route.rs
api/src/command/: mod.rs  route.rs
api/src/dashboard/: mod.rs  route.rs
api/src/deployment/: mod.rs  route.rs  routes.rs  schema.rs
api/src/device/: debug_ap.rs  helpers.rs  mod.rs  route.rs  schema.rs
api/src/distribution/: mod.rs  route.rs
api/src/event/: mod.rs  route.rs
api/src/handlers/: download.rs  home.rs  logs.rs  mod.rs  upload.rs
api/src/ip_address/: mod.rs  route.rs
api/src/logstream/: mod.rs  route.rs  session.rs
api/src/modem/: mod.rs  (+2 more)
cli/: Cargo.toml  README.md
cli/src/: api.rs  auth.rs  cli.rs  interactive.rs  main.rs  print.rs  tunnel.rs
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: daemon_api.rs
models/: Cargo.toml
models/src/: command.rs  deployment.rs  device.rs  distribution.rs  ip_address.rs  lib.rs  modem.rs  release.rs  system.rs
(+365 files in other folders)
