[workspace]
members = ["api", "cli", "models", "smithd", "updater"]
resolver = "2"

[workspace.package]
description = "Teton's Fleet Management System. It provides automation to easily deploy and monitor applications at scale."
version = "0.2.87"
edition = "2024"

repository = "https://github.com/teton-ai/smith"
authors = [
    "Luis Silva <luis@teton.ai>",
    "Roland Kajatin <roland@teton.ai>",
    "Alvaro Molina <alvaro@teton.ai>",
    "Christian Bender <cbender@teton.ai>",
]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "chrono",
    "json",
    "postgres",
    "time",
    "uuid",
    "ipnetwork",
] }
utoipa = { version = "5", features = ["chrono"] }
