[package]
name = "api"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
smith = { path = "../smithd" }
models = { path = "../models" }
anyhow.workspace = true

rust-s3 = "0.35.1"
axum = { workspace = true, features = ["macros", "multipart"] }
axum-extra = { version = "0.9.4", features = ["typed-header", "query"] }
chrono = { workspace = true }
dotenvy = "0.15.7"
futures = "0.3.30"
jwks_client_rs = "0.5"
oauth2 = "4.4.2"
reqwest = { version = "0.12.8", features = ["json"] }
sentry = { version = "0.45.0", features = ["tower-axum-matched-path", "panic"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "json",
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls",
    "uuid",
    "ipnetwork",
] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1" }
tower-http = { version = "0.6.1", features = [
  "compression-full",
  "decompression-full",
  "cors",
  "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = "0.18"
metrics-exporter-prometheus = "0.8"
utoipa = { workspace = true }
utoipa-axum = "0.1"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum", "vendored"] }
debpkg = "0.6.0"
axum_typed_multipart = { version = "0.13.1" }
tempfile = "3.13.0"
tokio-stream = { version = "0.1.16", features = ["sync"] }
tokio-util = { version = "0.7.17", features = ["io"] }
toml = "0.8.20"
cloudfront_sign = "0.4.1"
