[package]
name = "cli"
version.workspace = true
description = "Smith Command Line Interface (CLI)"
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sm"
path = "src/main.rs"

[dependencies]
smith = { path = "../smithd" }
models = { path = "../models" }
anyhow = "1.0.97"
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = { version = "4.5.46" }
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
open = "5.3.2"
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
whoami = "1.5.2"
base64 = "0.22.1"
serde_json = "1.0.128"
chrono = { workspace = true }
chrono-humanize = "0.2"
colored = "2"
dirs = "5.0"
indicatif = "0.17.8"
russh = "0.56"
termion = "4.0.2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-fd = "0.3.0"
unicode-width = "0.2.0"
strip-ansi-escapes = "0.2.1"
toml = "0.8.20"
rand = "0.8"
self_update = { version = "0.42.0", features = ["archive-zip", "compression-zip-deflate"] }
serde_html_form = "0.2.8"
cliclack = "0.3.7"
regex = "1.12.2"
rand_core = { version = "0.9" }
