[package]
name = "models"
description.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true }
